# the-rustic-corner

./: .gitmodules  README.md
advent-of-code/src/: lib.rs
challenges/advent-of-code/: Cargo.toml
challenges/advent-of-code/aoc-2022/: Cargo.toml
challenges/advent-of-code/aoc-2022/src/: day01.rs  day02.rs  main.rs
challenges/advent-of-code/aoc-common/src/: lib.rs
challenges/advent-of-code/aoc-macros/: Cargo.toml
challenges/advent-of-code/aoc-macros/src/: lib.rs
challenges/advent-of-code/src/: main.rs
challenges/codewars/kyu7/src/: highest_profit.rs
challenges/codewars/kyu8/: Cargo.toml
challenges/exercism/: .gitignore
challenges/exercism/rust/accumulate/src/: lib.rs
challenges/exercism/rust/acronym/src/: lib.rs
challenges/exercism/rust/armstrong-numbers/src/: lib.rs
challenges/lc-old/src/linked_lists/: add_two_numbers.rs
challenges/lc-old/src/strings/: length_of_longest_substring.rs
challenges/lc/src/: main.rs
challenges/lc/src/arrays/: mod.rs  p0001_two_sum.rs  p0026_remove_duplicates.rs
challenges/lc/src/strings/: mod.rs
challenges/leetcode/src/: main.rs
codewars/kyu7/: Cargo.toml
codewars/kyu7/src/: lib.rs
codewars/kyu8/src/: are_you_playing_banjo.rs  lib.rs
learnings/: README.md  articles.md  presentations.md  resources.md  tutorials.md
leetcode/src/arrays/: two_sum.rs
project-ideas/: README.md
project-ideas/by-crate/: README.md  diesel.md  reqwest.md  sysinfo.md
skunkworks/rs-roguelike/: Cargo.toml
skunkworks/rs-roguelike/src/: main.rs  map.rs  player.rs  state.rs
(+3 files in other folders)
