[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "advent-of-code"
path = "src/main.rs"

[workspace.dependencies]

aoc_2022 = { version = "0.1.0", package = "aoc_2022", path="./aoc-2022" }
aoc_macros = { version = "0.1.0", package = "aoc_macros", path="./aoc-macros" }
aoc_common = { version = "0.1.0", package = "aoc_common", path="./aoc-common" }

[dependencies]
aoc_2022 = { workspace = true }
aoc_macros = { workspace = true }
aoc_common = { workspace = true }
